--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Rayner communication bot</h1> <!-- ur chatbot title here too -->
     <p>Rayner bot is a communication but which responds to your questions</p> <!-- ur chatbot description here -->
     <pre></pre> <!-- ur chatbot code here -->
-    <script type="text/javascript" id="susi-bot-script" data-userid="7a48c09b8e10df5cbf1f8e0dc6d06e44" data-group="Communication" data-language="en" data-skill="rayner" src="https://skills.susi.ai/susi-chatbot.js" ></script>
+    <script type='text/javascript' id='susi-bot-script' data-userid='7a48c09b8e10df5cbf1f8e0dc6d06e44' data-group='Communication' data-language='en' data-skill='Rayner' src='https://skills.susi.ai/susi-chatbot.js'></script>
     
 </body>
 </html>
